[package]
name = "streamertools"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "advanced"] }
iced_aw = { version = "0.14.0", features = ["full"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "form", "query"] }
tokio = { version = "1.49.0" , features = ["full"]}
open = "5.3.3"
keyring = {  version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6.0.0"
rand = "0.9.2"
